[gd_scene load_steps=10 format=3 uid="uid://dyvgpxd0rqg44"]

[ext_resource type="Script" uid="uid://ci7by8hu7ag7v" path="res://scenes/main_menu/main_menu.gd" id="1_nhkf3"]
[ext_resource type="AudioStream" uid="uid://ckvo43m2bsblb" path="res://resources/music/Pixel Panic 2.mp3" id="2_0ebjn"]
[ext_resource type="Texture2D" uid="uid://ddvtd35nbmuml" path="res://resources/background/background_final.png" id="2_uqeha"]
[ext_resource type="FontFile" uid="uid://7jdcyc6qvdvm" path="res://resources/font/poco.ttf" id="3_uqeha"]

[sub_resource type="Theme" id="Theme_fsom3"]

[sub_resource type="Theme" id="Theme_wem23"]

[sub_resource type="Theme" id="Theme_3ovsr"]

[sub_resource type="Theme" id="Theme_5seab"]

[sub_resource type="Theme" id="Theme_4xg86"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fsom3")
script = ExtResource("1_nhkf3")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9959025, 1)
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575, 323.99997)
scale = Vector2(0.99065185, 0.99065185)
texture = ExtResource("2_uqeha")

[node name="VerticalBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -141.0
offset_right = 174.0
offset_bottom = -19.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wem23")
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="CreditsButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_3ovsr")
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5seab")
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="CreditsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -543.0
offset_top = -545.0
offset_right = -39.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_4xg86")
theme_override_fonts/font = ExtResource("3_uqeha")
theme_override_font_sizes/font_size = 24
text = "Made by

wuhsel (Coding)
Awe (Coding)
DaDave (Coding & Level design)
klimagnet (Level design & Audio)
LiPhora  (Grapics & Animations)

assets: \"Modern interiors\" & 
\"Modern office\" & 
\"Modern exterioirs by LimeZu 
(https://limezu.itch.io/)
\"Explosion sounds\" by CreatorAssets 
(https://creatorassets.com/)
\"Open Font Package\" by dalton5000
(https://godotengine.org/asset-library/asset/316)"
horizontal_alignment = 2

[node name="ControlsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 793.0
offset_top = 482.0
offset_right = 1119.0
offset_bottom = 644.0
theme_override_font_sizes/font_size = 24
text = "Controls:
WSAD - Move
Space - Dodge
Enter - Push Button/Enter Box
Tab - Toggle Objective display"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0ebjn")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="VerticalBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VerticalBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VerticalBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
